compiler/actonc/test/syntaxerrors/err18.act
# Invalid lambda syntax
def higher_order():
    f = x => x + 1
    return f(5)